tests/rosetta/out/Fortran/averages-median-1.error
gfortran: exit status 1
/tmp/averages-median-1.f90:27:17:

   27 |         if ((arr(((j)+1)) > arr((((j + 1))+1)))) then
      |                 1
Error: Expected a right parenthesis in expression at (1)
/tmp/averages-median-1.f90:31:11:

   31 |         end if
      |           1
Error: Expecting END DO statement at (1)
/tmp/averages-median-1.f90:45:21:

   45 |       m = (((m + arr((((half - 1))+1)))) / 2.0)
      |                     1
Error: Expected a right parenthesis in expression at (1)
/tmp/averages-median-1.f90:22:13:

   22 |     n = size(arr)
      |             1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-1.f90:26:17:

   26 |       do while (((j < n) - 1))
      |                 1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/averages-median-1.f90:42:22:

   42 |     half = int(((size(arr) / 2)))
      |                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-1.f90:44:18:

   44 |     if ((mod(size(arr),2) == 0)) then
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/averages-median-1.f90:13:18:

   13 |   write(s0,'(G0)') median((/3.0,1.0,4.0,1.0/))
      |                  1
Error: Type mismatch in argument ‘a’ at (1); passed REAL(4) to INTEGER(4)
/tmp/averages-median-1.f90:15:18:

   15 |   write(s1,'(G0)') median((/3.0,1.0,4.0,1.0,5.0/))
      |                  1
Error: Type mismatch in argument ‘a’ at (1); passed REAL(4) to INTEGER(4)
