tests/rosetta/out/Fortran/averages-median-1.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program averages_median_1
  implicit none
  character(len=100) :: s0
  character(len=100) :: s1
    integer :: arr
    integer :: n
    integer :: i
      integer :: j
          integer :: tmp
    integer :: half
    integer :: m
  write(s0,'(G0)') median((/3.0,1.0,4.0,1.0/))
  print *, s0
  write(s1,'(G0)') median((/3.0,1.0,4.0,1.0,5.0/))
  print *, s1
  
  contains
  recursive integer function sortFloat(xs) result(res)
    integer, intent(in) :: xs
    arr = xs
    n = size(arr)
    i = 0
    do while ((i < n))
      j = 0
      do while (((j < n) - 1))
        if ((arr(((j)+1)) > arr((((j + 1))+1)))) then
          tmp = arr(((j)+1))
          arr(((j)+1)) = arr((((j + 1))+1))
          arr((((j + 1))+1)) = tmp
        end if
        j = (j + 1)
      end do
      i = (i + 1)
    end do
    res = arr
    return
  end function sortFloat
  recursive real function median(a) result(res)
    integer, intent(in) :: a
    arr = sortFloat(a)
    half = int(((size(arr) / 2)))
    m = arr(((half)+1))
    if ((mod(size(arr),2) == 0)) then
      m = (((m + arr((((half - 1))+1)))) / 2.0)
    end if
    res = m
    return
  end function median
end program averages_median_1
